abstracted json creation inещ UserResponse class also corrected method name in GlobalExceptionHandler