@@ -1,5 +1,6 @@
 package com.example.clear_solutions.controller;
 
+import com.example.clear_solutions.dto.UserResponse;
 import com.example.clear_solutions.model.User;
 import com.example.clear_solutions.service.UserService;
 import org.springframework.http.HttpStatus;
@@ -9,87 +10,64 @@ import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
 import java.time.LocalDate;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("api/v1/users")
 public class UserController {
 
     private final UserService userService;
-    private final ServletRequestAttributes attributes;
 
     public UserController(UserService userService) {
         this.userService = userService;
-        attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
     }
 
     @PostMapping("/create")
-    public ResponseEntity<Map<String, Object>> createUser(@RequestBody User user) {
+    public ResponseEntity<UserResponse> createUser(@RequestBody User user) {
         User createdUser = userService.createUser(user);
-        Map<String, Object> response = createJsonApiResponse(createdUser, attributes.getRequest().getRequestURL().toString());
+        String requestUrl = getRequestUrl();
+        UserResponse response = new UserResponse(createdUser, requestUrl);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
 
-    @PutMapping("update/{id}")
-    public ResponseEntity<Map<String, Object>> updateUserFields(@PathVariable Long id, @RequestBody User userUpdates) {
+    @PatchMapping("update/{id}")
+    public ResponseEntity<UserResponse> updateUserFields(@PathVariable Long id, @RequestBody User userUpdates) {
         User updatedUser = userService.updateUserFields(id, userUpdates);
-        Map<String, Object> response = createJsonApiResponse(updatedUser, attributes.getRequest().getRequestURL().toString());
+        String requestUrl = getRequestUrl();
+        UserResponse response = new UserResponse(updatedUser, requestUrl);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @PutMapping("update-all/{id}/")
-    public ResponseEntity<Map<String, Object>> updateAllUserFields(@PathVariable Long id, @RequestBody User userUpdates) {
+    public ResponseEntity<UserResponse> updateAllUserFields(@PathVariable Long id, @RequestBody User userUpdates) {
         User updatedUser = userService.updateAllUserFields(id, userUpdates);
-        Map<String, Object> response = createJsonApiResponse(updatedUser, attributes.getRequest().getRequestURL().toString());
+        String requestUrl = getRequestUrl();
+        UserResponse response = new UserResponse(updatedUser, requestUrl);
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @DeleteMapping("delete/{id}")
-    public ResponseEntity<Map<String, Object>> deleteUser(@PathVariable Long id) {
+    public ResponseEntity<Void> deleteUser(@PathVariable Long id) {
         userService.deleteUser(id);
-        Map<String, Object> response = createJsonApiResponse(null, attributes.getRequest().getRequestURL().toString());
-        return new ResponseEntity<>(response, HttpStatus.NO_CONTENT);
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
     @GetMapping("/search")
-    public ResponseEntity<List<Map<String, Object>>> findUsersByBirthDateRange(@RequestBody LocalDate from, @RequestBody LocalDate to) {
+    public ResponseEntity<List<UserResponse>> findUsersByBirthDateRange(@RequestBody LocalDate from, @RequestBody LocalDate to) {
         List<User> users = userService.findUsersByBirthDateRange(from, to);
-        List<Map<String, Object>> responses = users.stream()
-                .map(user -> createJsonApiResponse(user, attributes.getRequest().getRequestURL().toString()))
-                .toList();
+        String requestUrl = getRequestUrl();
+        List<UserResponse> responses = users.stream()
+                .map(user -> new UserResponse(user, requestUrl))
+                .collect(Collectors.toList());
         return new ResponseEntity<>(responses, HttpStatus.OK);
     }
 
-    private Map<String, Object> createJsonApiResponse(User user, String selfLink) {
-        Map<String, Object> response = new HashMap<>();
-
-        Map<String, String> links = new HashMap<>();
-        links.put("self", selfLink);
-
-        response.put("links", links);
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("type", "user");
-        if (user != null) {
-            data.put("id", user.getId());
-
-            Map<String, Object> attributes = new HashMap<>();
-            attributes.put("email", user.getEmail());
-            attributes.put("firstName", user.getFirstName());
-            attributes.put("lastName", user.getLastName());
-            attributes.put("birthDate", user.getBirthDate());
-            if (user.getAddress() != null) {
-                attributes.put("address", user.getAddress());
-            }
-            if (user.getPhoneNumber() != null) {
-                attributes.put("phoneNumber", user.getPhoneNumber());
-            }
-
-            data.put("attributes", attributes);
+    private String getRequestUrl() {
+        ServletRequestAttributes attributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
+        if (attributes != null) {
+            return attributes.getRequest().getRequestURL().toString();
         }
-        response.put("data", data);
-        return response;
+        return null;
     }
 }
